[gd_scene load_steps=20 format=3 uid="uid://b2xyd22qyvitu"]

[ext_resource type="Script" uid="uid://dt3nhsns6lfti" path="res://scripts/deatchmatch_player.gd" id="1_w8hlr"]
[ext_resource type="Script" uid="uid://duqnljlxs85" path="res://resources/player_stat.gd" id="2_cqyq4"]
[ext_resource type="Script" uid="uid://wjqvn3mjonok" path="res://scripts/player_shooter.gd" id="3_jwoyo"]
[ext_resource type="Script" uid="uid://c5dl4767j7a2a" path="res://resources/shooter_stat.gd" id="4_c5es4"]
[ext_resource type="Script" uid="uid://drq2bphy4y2ku" path="res://scripts/player_input.gd" id="5_4fgu5"]
[ext_resource type="Script" uid="uid://cbwxn08wwgip3" path="res://scripts/player_health.gd" id="6_dahsc"]
[ext_resource type="Script" uid="uid://ds1v72aqd1ena" path="res://resources/health_stat.gd" id="7_esax1"]
[ext_resource type="Script" uid="uid://b85e76xkujo2a" path="res://scripts/health_bar.gd" id="8_8xlop"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_smehm"]
friction = 0.0

[sub_resource type="Resource" id="Resource_fjrip"]
script = ExtResource("2_cqyq4")
movement_force = 10
stop_force = 10
max_velocity = 300
air_movement_coefficient = 0.2
jump_force = 300
metadata/_custom_type_script = "uid://duqnljlxs85"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(16, 16)

[sub_resource type="Resource" id="Resource_smehm"]
script = ExtResource("4_c5es4")
knockback_force = 300
knockback_duration = 0.15
cooldown = 1.0
metadata/_custom_type_script = "uid://c5dl4767j7a2a"

[sub_resource type="Gradient" id="Gradient_rd3vj"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.33427757, 0.40897298, 0.759999, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2q6dc"]
gradient = SubResource("Gradient_rd3vj")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_w8hlr"]
properties/0/path = NodePath(".:direction")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_cqyq4"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("PlayerHealth:current_health")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("HealthBar:value")
properties/3/spawn = true
properties/3/replication_mode = 2

[sub_resource type="Resource" id="Resource_tuyoq"]
script = ExtResource("7_esax1")
max_health = 4
metadata/_custom_type_script = "uid://ds1v72aqd1ena"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smehm"]
bg_color = Color(0.37409055, 0, 0.13411218, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjrip"]
bg_color = Color(0, 0.7134115, 0.4364251, 1)

[node name="DeathmatchPlayer" type="RigidBody2D"]
collision_layer = 2
collision_mask = 13
mass = 0.5
physics_material_override = SubResource("PhysicsMaterial_smehm")
continuous_cd = 1
script = ExtResource("1_w8hlr")
player_stat = SubResource("Resource_fjrip")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qhqgy")

[node name="BulletSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://ssa5260nc2ff")
spawn_path = NodePath(".")

[node name="Shooter" type="Node2D" parent="."]
rotation = 0.011181319
scale = Vector2(0.99999994, 0.99999994)
script = ExtResource("3_jwoyo")
shooter_stat = SubResource("Resource_smehm")

[node name="ShootingPoint" type="Marker2D" parent="Shooter"]
position = Vector2(29.998123, -0.3354326)

[node name="PlayerSprite" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(0.07436019, -17.93674)
texture = SubResource("GradientTexture1D_2q6dc")

[node name="PlayerInput" type="Node2D" parent="."]
script = ExtResource("5_4fgu5")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="PlayerInput"]
replication_config = SubResource("SceneReplicationConfig_w8hlr")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_cqyq4")

[node name="PlayerHealth" type="Node2D" parent="."]
script = ExtResource("6_dahsc")
health_stat = SubResource("Resource_tuyoq")

[node name="GroundCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 20)
collision_mask = 4

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -16.0
offset_right = 9.0
offset_bottom = -11.0
theme_override_styles/background = SubResource("StyleBoxFlat_smehm")
theme_override_styles/fill = SubResource("StyleBoxFlat_fjrip")
value = 100.0
show_percentage = false
script = ExtResource("8_8xlop")

[node name="Camera2D" type="Camera2D" parent="."]
